--- a/dwp-hack-the-north-ui/package.json
+++ b/dwp-hack-the-north-ui/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
+    "ts-stream": "^2.0.1",
     "typescript": "~3.7.2"
   },
   "resolutions": {
