--- a/dwp-hack-the-north-ui/package.json
+++ b/dwp-hack-the-north-ui/package.json
@@ -56,8 +56,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "yarn lint && yarn test",
-      "pre-push": "yarn lint && yarn test"
+      "pre-commit": "yarn lint && yarn test"
     }
   }
 }
