--- a/dwp-hack-the-north-ui/package.json
+++ b/dwp-hack-the-north-ui/package.json
@@ -14,8 +14,10 @@
     "@types/react-dom": "^16.9.0",
     "@types/react-redux": "^7.1.5",
     "@types/react-router-dom": "^5.1.3",
+    "aws-cdk": "^1.22.0",
     "govuk-frontend": "^3.4.0",
     "husky": "^4.0.6",
+    "jscs": "^3.0.7",
     "node-sass": "^4.13.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
