--- a/.gitignore
+++ b/.gitignore
@@ -539,3 +539,6 @@ tags
 .history
 
 # End of https://www.gitignore.io/api/vim,node,react,emacs,reactnative,intellij+all,visualstudiocode
+
+# Custom Golang nonsense
+pkg/
