--- a/dwp-hack-the-north-ui/package.json
+++ b/dwp-hack-the-north-ui/package.json
@@ -12,6 +12,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "@types/react-loader-spinner": "^3.1.0",
     "@types/react-redux": "^7.1.5",
     "@types/react-router-dom": "^5.1.3",
     "aws-cdk": "^1.22.0",
@@ -21,6 +22,7 @@
     "node-sass": "^4.13.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-loader-spinner": "^3.1.5",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
