Add Repo Config for Provisioning
- Add eslint dependency and ignore file
- Add husky dependency and config to provisioning
- Define jest configuration for provisioning to be clearer

--- a/provisioning/tsconfig.json
+++ b/provisioning/tsconfig.json
@@ -19,5 +19,6 @@
     "strictPropertyInitialization":false,
     "typeRoots": ["./node_modules/@types"]
   },
+  "include": ["lib", "test"],
   "exclude": ["cdk.out"]
 }
