--- a/provisioning/package.json
+++ b/provisioning/package.json
@@ -8,23 +8,35 @@
     "build": "tsc",
     "watch": "tsc -w",
     "test": "jest",
-    "cdk": "cdk"
+    "cdk": "cdk",
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "devDependencies": {
     "@aws-cdk/assert": "^1.20.0",
     "@types/jest": "^24.0.22",
     "@types/node": "10.17.5",
+    "@typescript-eslint/eslint-plugin": "^2.18.0",
+    "@typescript-eslint/parser": "^2.18.0",
+    "aws-cdk": "^1.20.0",
+    "eslint": "^6.8.0",
+    "husky": "^4.2.1",
     "jest": "^24.9.0",
     "ts-jest": "^24.1.0",
-    "aws-cdk": "^1.20.0",
     "ts-node": "^8.1.0",
     "typescript": "~3.7.2"
   },
   "dependencies": {
-    "@aws-cdk/aws-s3": "^1.20.0",
-    "@aws-cdk/aws-s3-deployment": "^1.20.0",
-    "@aws-cdk/core": "^1.20.0",
+    "@aws-cdk/aws-apigateway": "^1.22.0",
+    "@aws-cdk/aws-lambda": "^1.22.0",
+    "@aws-cdk/aws-s3": "^1.22.0",
+    "@aws-cdk/aws-s3-deployment": "^1.22.0",
+    "@aws-cdk/core": "^1.22.0",
     "aws": "0.0.3-2",
     "source-map-support": "^0.5.16"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run lint && npm run test"
+    }
   }
 }
